# cmake-template

./: .gitignore  README.md  launch-sandbox-setup.sh  setup-sanbox.sh
.github/workflows/: build-foobar.yml
foobar-core/: CMakeLists.txt  README.md
foobar-core/src/include/: foobar.h
foobar-core/src/libfoo/: destroy_foo.c  do_foo.c  init_foo.c
foobar-examples/: CMakeLists.txt
foobar-examples/src/: hello_foobar.c
helper-scripts/abstract/: abstract-compile-examples.sh  abstract-compile.sh  abstract-upload.sh
helper-scripts/project-impl/: compile-atmega32.sh  compile-atmega328p.sh  upload-to-chip.sh  variables.sh
